--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: install deps
+      run: sudo apt-get install -y sdl2 sdl2-mixer
     - name: configure
       run: ./configure
     - name: make
