--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: install deps
-      run: sudo apt-get install -y sdl2 sdl2-mixer
+      run: sudo apt-get install -y libsdl2-dev libsdl2-mixer-dev
     - name: configure
       run: ./configure
     - name: make
