--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -34,7 +34,7 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-bin_PROGRAMS = Ri_li$(EXEEXT)
+bin_PROGRAMS = Li_ri$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -47,12 +47,12 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
-am_Ri_li_OBJECTS = audio.$(OBJEXT) ecran.$(OBJEXT) editeur.$(OBJEXT) \
+am_Li_ri_OBJECTS = audio.$(OBJEXT) ecran.$(OBJEXT) editeur.$(OBJEXT) \
 	jeux.$(OBJEXT) loco.$(OBJEXT) main.$(OBJEXT) menu.$(OBJEXT) \
 	mouse.$(OBJEXT) sprite.$(OBJEXT) tableau.$(OBJEXT) \
 	utils.$(OBJEXT)
-Ri_li_OBJECTS = $(am_Ri_li_OBJECTS)
-Ri_li_LDADD = $(LDADD)
+Li_ri_OBJECTS = $(am_Li_ri_OBJECTS)
+Li_ri_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -65,8 +65,8 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-SOURCES = $(Ri_li_SOURCES)
-DIST_SOURCES = $(Ri_li_SOURCES)
+SOURCES = $(Li_ri_SOURCES)
+DIST_SOURCES = $(Li_ri_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -149,7 +149,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 AM_CPPFLAGS = -DDATA_DIR="\"$(pkgdatadir)\"" -Wall -g -O0 #-fsanitize=address
 AM_LDFLAGS = #-fsanitize=address
-Ri_li_SOURCES = audio.h audio.cc ecran.h ecran.cc editeur.h editeur.cc jeux.h jeux.cc loco.h loco.cc preference.h main.cc menu.h menu.cc mouse.h mouse.cc sprite.h sprite.cc tableau.h tableau.cc utils.h utils.cc
+Li_ri_SOURCES = audio.h audio.cc ecran.h ecran.cc editeur.h editeur.cc jeux.h jeux.cc loco.h loco.cc preference.h main.cc menu.h menu.cc mouse.h mouse.cc sprite.h sprite.cc tableau.h tableau.cc utils.h utils.cc
 all: all-am
 
 .SUFFIXES:
@@ -206,9 +206,9 @@ uninstall-binPROGRAMS:
 
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
-Ri_li$(EXEEXT): $(Ri_li_OBJECTS) $(Ri_li_DEPENDENCIES) 
-	@rm -f Ri_li$(EXEEXT)
-	$(CXXLINK) $(Ri_li_LDFLAGS) $(Ri_li_OBJECTS) $(Ri_li_LDADD) $(LIBS)
+Li_ri$(EXEEXT): $(Li_ri_OBJECTS) $(Li_ri_DEPENDENCIES) 
+	@rm -f Li_ri$(EXEEXT)
+	$(CXXLINK) $(Li_ri_LDFLAGS) $(Li_ri_OBJECTS) $(Li_ri_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
