--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,9 @@
 ---
+Version: 3.1.1
+Date: 2024-01-05
+Description:
+  - Fix Android start (3.1.0 does not work at all on Android)
+---
 Version: 3.1.0
 Date: 2024-01-01
 Description:
@@ -11,9 +16,8 @@ Version: 3.0.1
 Date: 2024-12-19
 Description:
   - CMake compilation
-  - Add IME keyboard on Android
-  - Handle Back button on Android (same as Escape)
-  - Fix audio not playing on Android when leaving the game via the menu and restarting it
+  - Github workflow to provide binaries for Linux, Windows and macOS
+  - Add missing icon for F-Droid
 ---
 Version: 3.0.0
 Date: 2024-11-11
