--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ option(USE_CONAN
 if(USE_CONAN)
   find_package(SDL2 REQUIRED CONFIG)
   find_package(SDL2_mixer REQUIRED CONFIG)
-else()
+elseif (NOT EMSCRIPTEN)
   find_package(PkgConfig REQUIRED)
   pkg_check_modules(SDL2 REQUIRED sdl2 SDL2_mixer)
 endif()
@@ -58,6 +58,20 @@ add_executable(${LIRI_EXECUTABLE_NAME} WIN32
   )
 
 target_compile_definitions(${LIRI_EXECUTABLE_NAME} PUBLIC DATA_DIR="share/Li-ri")
+
+if(EMSCRIPTEN)
+  set(CMAKE_EXECUTABLE_SUFFIX ".html")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/data@/")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/Sounds@/Sounds/")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL=2")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL_MIXER=2")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL=2")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL_MIXER=2")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--emrun")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sTOTAL_MEMORY=256MB")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/data@/")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/Sounds@/Sounds/")
+endif()
 
 if(USE_CONAN)
   target_link_libraries(${LIRI_EXECUTABLE_NAME} PRIVATE SDL2::SDL2 SDL2_mixer::SDL2_mixer)
