--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,12 @@
 ---
+Version: 3.1.2
+Date: 2024-01-12
+Description:
+  - Add a rope between 2 wagons
+  - Add screenshot feature (key F12)
+  - Speed up compilation time (only use what is needed in SDL)
+  - Fix crash when exiting on Linux
+---
 Version: 3.1.1
 Date: 2024-01-05
 Description:
