install appdata, desktop and icons files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,14 @@ install(TARGETS ${LIRI_EXECUTABLE_NAME}
   LIBRARY DESTINATION lib
   BUNDLE DESTINATION .)
 
+install(FILES org.liri.liri.appdata.xml DESTINATION "${CMAKE_INSTALL_DATADIR}/appdata/")
+install(FILES org.liri.liri.desktop DESTINATION "${CMAKE_INSTALL_DATADIR}/applications/")
+install(FILES data/Li-ri-icon-16x16.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/16x16/apps/" RENAME li-ri.png)
+install(FILES data/Li-ri-icon-32x32.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/32x32/apps/" RENAME li-ri.png)
+install(FILES data/Li-ri-icon-48x48.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/48x48/apps/" RENAME li-ri.png)
+install(FILES data/Li-ri-icon-64x64.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/64x64/apps/" RENAME li-ri.png)
+install(FILES data/Li-ri-icon-128x128.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/128x128/apps/" RENAME li-ri.png)
+
 if(WIN32)
   install(DIRECTORY ${CMAKE_SOURCE_DIR}/data/ DESTINATION bin)
   install(DIRECTORY ${CMAKE_SOURCE_DIR}/Sounds DESTINATION bin)
