--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,8 @@ install(TARGETS ${LIRI_EXECUTABLE_NAME}
   LIBRARY DESTINATION lib
   BUNDLE DESTINATION .)
 
-install(FILES org.liri.liri.appdata.xml DESTINATION "${CMAKE_INSTALL_DATADIR}/appdata/")
-install(FILES org.liri.liri.desktop DESTINATION "${CMAKE_INSTALL_DATADIR}/applications/")
+install(FILES io.github.petitlapin.appdata.xml DESTINATION "${CMAKE_INSTALL_DATADIR}/appdata/")
+install(FILES io.github.petitlapin.desktop DESTINATION "${CMAKE_INSTALL_DATADIR}/applications/")
 install(FILES data/Li-ri-icon-16x16.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/16x16/apps/" RENAME li-ri.png)
 install(FILES data/Li-ri-icon-32x32.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/32x32/apps/" RENAME li-ri.png)
 install(FILES data/Li-ri-icon-48x48.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/48x48/apps/" RENAME li-ri.png)
