fix appdata to be compliant with flathub

--- a/io.github.petitlapin.Li-ri.desktop
+++ b/io.github.petitlapin.Li-ri.desktop
@@ -5,7 +5,7 @@ Name=Li-ri
 GenericName=Li-ri Arcade Game
 Comment=Drive a toy wood engine
 Exec=Li-ri
-Icon=li-ri
+Icon=io.github.petitlapin.Li-ri
 Terminal=false
 Type=Application
 Categories=ArcadeGame;Simulation;Game;KidsGame;
