--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,9 @@
 ---
+Version: 3.1.3
+Date: 2024-01-13
+Description:
+  - Fix appdata linter errors
+---
 Version: 3.1.2
 Date: 2024-01-12
 Description:
