--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,11 @@
 ---
+Version: 3.1.4
+Date: 2024-01-15
+Description:
+  - Store the maximum level reached per difficulty
+  - Fix crash when exiting in the first run "choose language" window
+  - Use standard .ini file to store the configuration
+---
 Version: 3.1.3
 Date: 2024-01-13
 Description:
