game, allow any key to be pressed to start the game. Fixes: #47

--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,9 @@
 ---
+Version: 3.1.5
+Date: 2024-xx-xx
+Description:
+  - Allow to press any key to start the level as written in the text
+---
 Version: 3.1.4
 Date: 2024-01-15
 Description:
