new colors for icon to differentiate from original Ri-Li

--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,8 +1,9 @@
 ---
 Version: 3.1.5
-Date: 2024-xx-xx
+Date: 2024-05-29
 Description:
   - Allow to press any key to start the level as written in the text
+  - New colors for icon to differentiate from original Ri-Li
 ---
 Version: 3.1.4
 Date: 2024-01-15
