force macos-12 as turtlebrowser/get-conan does not seem to support 14 yet

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -31,7 +31,7 @@ jobs:
                 name: ubuntu
                 path: build/Li_ri-*.sh
     mac:
-        runs-on: macos-latest
+        runs-on: macos-12
         steps:
             - uses: actions/checkout@v4
             - name: Install Conan
