--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ option(USE_CONAN
 if(USE_CONAN)
   find_package(SDL2 REQUIRED CONFIG)
   find_package(SDL2_mixer REQUIRED CONFIG)
-else()
+elseif (NOT EMSCRIPTEN)
   find_package(PkgConfig REQUIRED)
   pkg_check_modules(SDL2 REQUIRED sdl2 SDL2_mixer)
 endif()
@@ -75,6 +75,24 @@ target_include_directories(${LIRI_EXECUTABLE_NAME} PUBLIC ${CMAKE_CURRENT_BINARY
 
 if(LINUX)
   target_compile_definitions(${LIRI_EXECUTABLE_NAME} PUBLIC "-DSI_NO_CONVERSION=1")
+endif()
+
+if(EMSCRIPTEN)
+  set(CMAKE_EXECUTABLE_SUFFIX ".html")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/data@/")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/Sounds@/Sounds/")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL=2")
+  target_compile_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL_MIXER=2")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL=2")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sUSE_SDL_MIXER=2")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--emrun")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sENVIRONMENT=web")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sASYNCIFY")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--closure 1")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sINITIAL_MEMORY=256mb")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "-sEXPORTED_RUNTIME_METHODS=['allocate']")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/data@/")
+  target_link_options(${LIRI_EXECUTABLE_NAME} PRIVATE "--embed-file=${CMAKE_SOURCE_DIR}/Sounds@/Sounds/")
 endif()
 
 if(USE_CONAN)
