--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,13 +13,11 @@ jobs:
             - name: Install Conan
               uses: turtlebrowser/get-conan@main
               with:
-                version: 1.62.0
+                version: 2.8.1
             - name: Configure conan
-              run: conan profile new default --detect
-            - name: Update default profile
-              run: conan profile update settings.compiler.libcxx=libstdc++11 default
+              run: conan profile detect
             - name: Install deps
-              run: conan install . --install-folder=${{github.workspace}}/build --build=missing -c tools.system.package_manager:mode=install -c tools.system.package_manager:sudo=True
+              run: conan install . --output-folder=${{github.workspace}}/build --build=missing -c tools.system.package_manager:mode=install -c tools.system.package_manager:sudo=True
             - name: "Configure and build"
               run: cmake -DCMAKE_TOOLCHAIN_FILE=build/Release/generators/conan_toolchain.cmake -DUSE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -S . -B build
             - name: build
@@ -37,14 +35,12 @@ jobs:
             - name: Install Conan
               uses: turtlebrowser/get-conan@main
               with:
-                version: 1.62.0
+                version: 2.8.1
 
             - name: Configure conan
-              run: conan profile new default --detect
-            - name: Update default profile
-              run: conan profile update settings.compiler.libcxx=libc++ default
+              run: conan profile detect
             - name: Install deps
-              run: conan install . --install-folder=${{github.workspace}}/build --build=missing
+              run: conan install . --output-folder=${{github.workspace}}/build --build=missing
 
             - name: "Configure and build"
               run: cmake -DCMAKE_TOOLCHAIN_FILE=build/Release/generators/conan_toolchain.cmake -DUSE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -S . -B build
@@ -64,20 +60,21 @@ jobs:
             - name: Install Conan
               uses: turtlebrowser/get-conan@main
               with:
-                version: 1.62.0
+                version: 2.8.1
 
             - name: Configure conan
-              run: conan profile new default --detect
+              run: conan profile detect
             - name: Install deps
-              run: conan install . --install-folder=${{github.workspace}}/build --build=missing
+              run: conan install . --output-folder=${{github.workspace}}/build --build=missing
             - name: "Configure and build"
-              run: cmake -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/build/generators/conan_toolchain.cmake -DUSE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -S . -B build
+              run: cmake -DCMAKE_TOOLCHAIN_FILE="${{github.workspace}}/build/build/generators/conan_toolchain.cmake" -DUSE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -S . -B build
+
             - name: build
               run: cmake --build build --config Release
             - name: Install NSIS
-              uses: repolevedavaj/install-nsis@v1.0.1
+              uses: repolevedavaj/install-nsis@v1.0.2
               with:
-                nsis-version: 3.08
+                nsis-version: "3.10"
             - name: package
               run: cmake --build build --config Release --target package
             - uses: actions/upload-artifact@v4
