--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
                   android:appCategory="game"
                   android:allowBackup="true"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:banner="@drawable/banner"
                   android:hardwareAccelerated="true" >
         <activity android:name="LiRi"
                   android:screenOrientation="landscape"
@@ -20,6 +21,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
