--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,11 @@ set(LIRI_EXECUTABLE_NAME Li-ri)
 option(USE_CONAN
   "Use conan to fetch dependencies" OFF)
 if(USE_CONAN)
-  find_package(SDL2 REQUIRED CONFIG)
-  find_package(SDL2_mixer REQUIRED CONFIG)
+  find_package(SDL3 REQUIRED CONFIG)
+  find_package(SDL3_mixer REQUIRED CONFIG)
 else()
   find_package(PkgConfig REQUIRED)
-  pkg_check_modules(SDL2 REQUIRED sdl2 SDL2_mixer)
+  pkg_check_modules(SDL3 REQUIRED sdl3 sdl3-mixer)
 endif()
 
 set(CMAKE_CXX_STANDARD 11)
@@ -80,10 +80,10 @@ if(LINUX)
 endif()
 
 if(USE_CONAN)
-  target_link_libraries(${LIRI_EXECUTABLE_NAME} PRIVATE SDL2::SDL2 SDL2_mixer::SDL2_mixer)
+  target_link_libraries(${LIRI_EXECUTABLE_NAME} PRIVATE SDL3::SDL3 SDL3_mixer::SDL3_mixer)
 else()
-  target_include_directories(${LIRI_EXECUTABLE_NAME} PUBLIC ${SDL2_INCLUDE_DIRS})
-  target_link_libraries(${LIRI_EXECUTABLE_NAME} PRIVATE ${SDL2_LINK_LIBRARIES})
+  target_include_directories(${LIRI_EXECUTABLE_NAME} PUBLIC ${SDL3_INCLUDE_DIRS})
+  target_link_libraries(${LIRI_EXECUTABLE_NAME} PRIVATE ${SDL3_LINK_LIBRARIES})
 endif()
 
 target_link_libraries(${LIRI_EXECUTABLE_NAME} PRIVATE SimpleIni::SimpleIni)
